--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,3 +1,5 @@
+<!-- Copied from Lecture 6 of COMP0034 -->
+
 {% extends "base_errors.html" %}
 {% block title %}Page Not Found{% endblock %}
 {% block content %}
