--- a/app/templates/_formhelpers.html
+++ b/app/templates/_formhelpers.html
@@ -1,3 +1,5 @@
+<!-- Copied from Lecture 6 of COMP0034 -->
+
 {% macro render_field(field) %}
     <dt>{{ field.label }}
     <dd>{{ field(**kwargs)|safe }}
