--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -1,3 +1,5 @@
+<!-- Written by Student 3 Yifeng Zhao-->
+
 {% extends "base.html" %}
 {% from "_formhelpers.html" import render_field %}
 {% block title %} Signup {% endblock %}
