--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -1,3 +1,5 @@
+<!-- Written by Student 1 Yutong Cheng-->
+
 {% extends "base.html" %}
 {% block title %} Team : {{ team }} {% endblock %}
 {% block content %}
